Fix alignment of dropdown

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3628,7 +3628,7 @@ creator-profile-nfts {
 .buy-deso__country-dropdown {
   max-height: 28vh;
   overflow-y: scroll;
-  right: 138px !important;
+  right: -110px !important;
 }
 
 .buy-deso__copy-button {
